syntax = "proto3";

package regen.ecocredit.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "regen/ecocredit/v1/state.proto";

option go_package = "github.com/regen-network/regen-ledger/x/ecocredit/core";

// Params defines the updatable global parameters of the ecocredit module for
// use with the x/params module.
message Params {

  // credit_class_fee is a list of credit class creation fees accepted when
  // creating a credit class. Any fee listed is accepted and charged to the
  // credit class creator when creating a credit class.
  repeated cosmos.base.v1beta1.Coin credit_class_fee = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];

  // basket_fee is the fixed fee charged to the basket creator (the curator) and
  // sent to the community funding pool upon basket creation.
  repeated cosmos.base.v1beta1.Coin basket_fee = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];

  // allowed_class_creators is an allowlist defining the addresses with
  // the required permissions to create credit classes.
  repeated string allowed_class_creators = 3;

  // allowlist_enabled determines whether or not the allowlist for creating
  // credit classes is enabled. When set to true, only the addresses listed in
  // allowed_class_creators can create credit classes. When set to false, any
  // address can create credit classes.
  bool allowlist_enabled = 4;
}

// OriginTx is the transaction from another chain or registry that triggered
// the minting of credits.
message OriginTx {

  // id is the transaction ID of an originating transaction or operation based
  // on a type (i.e. transaction ID, serial number).
  string id = 1;

  // source is the source chain or registry of the transaction originating the
  // mint process (e.g. polygon, ethereum, verra).
  string source = 2;
}

// CreditTypeProposal is a gov Content type for adding a credit type.
message CreditTypeProposal {
  option (gogoproto.goproto_stringer) = false;

  // title is the title of the proposal.
  string title = 1;

  // description is the description of the proposal.
  string description = 2;

  // credit_type is the credit type to be added to the network if the proposal
  // passes.
  CreditType credit_type = 3;
}
